# ocm-agent-v1

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml  swagger.md
.github/workflows/: ci.yml
config/topics/: daibiao_xiaoguanjia.yaml  jingying_xiaozhushou.yaml  sales_contract_agent.yaml
db/: alembic.ini  env.py
db/versions/: 0001_init_session_message.py
prompts/intent/: jingying.txt  representative.txt  sales_contract.txt
scripts/: start.ps1
scripts/sql/: init.sql
sql/message/: append.sql  list_recent.sql  mark_failed.sql  mark_partial.sql
sql/session/: get_by_thread.sql  insert.sql  list_by_w3.sql  update_touch.sql
src/ma/: main.py
tests/e2e/: conftest.py  test_daibiao_xiaoguanjia_sse.py  test_followup_question.py  test_jingying_xiaozhushou_sse.py  test_sales_contract_sse.py
tests/integration/: conftest.py  test_kc_with_real_port.py  test_message_repository.py  test_metagc_with_real_port.py  test_rest_history.py  test_session_repository.py  test_uniioc_with_real_port.py  test_ws.py
tests/mock_downstreams/: kc_ws.py  metagc_sse.py  uniioc_chunk.py
tests/stream/: conftest.py  test_contracts.py
tests/unit/: test_chat_service_with_fake_topic.py  test_events.py  test_generic_enrich.py  test_graph_builtins.py  test_health.py  test_jingying_auth.py  test_llm_classifier.py  test_llm_classifier_openai.py  test_logging.py  test_metagc_adapter.py  test_node_wrappers.py  test_plugin_base.py  test_plugin_registry.py  test_representative_auth.py  test_sales_contract_auth.py  (+6 more)
(+44 files in other folders)
