[project]
name = "ma"
version = "0.0.1"
description = "MasterAgent - enterprise AI agent gateway"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<25",
    "ulid-py>=1.1,<2",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1",
    "httpx>=0.27,<0.28",
    "httpx-sse>=0.4,<0.5",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.13,<2",
    "langgraph>=0.2.50,<0.3",
    "langchain-core>=0.3,<0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "testcontainers[postgres]>=4.8,<5",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/ma"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
